Minor spacing fix

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -37,9 +37,18 @@ header {
     .left-section {
         flex-basis: 25%;
     }
+    
+    #center-section {
+        margin: auto;
+        order: 2;
+    }
 
     .right-section {
         flex-basis: 75%;
+    }
+    
+    #rgn-title-btn {
+        margin-top: 10px;
     }
 }
 
@@ -49,7 +58,6 @@ header {
     align-items: center;
     justify-content: center;
     gap: 15px;
-    margin-top: 10px;
     cursor: pointer;
     pointer-events: auto;
     font-family: Zen Maru Gothic;
@@ -58,13 +66,6 @@ header {
 @media only screen and (orientation: landscape) {
     #map-btn {
         margin-right: 70px;
-    }
-}
-
-@media only screen and (orientation: portrait) and (max-width: 768px) {
-    #center-section {
-        margin: auto;
-        order: 2;
     }
 }
 
